[package]
name = "tanren-bdd"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "BDD step-definition home for Tanren. Hosts the cucumber `World` and the cross-feature step registry. The only crate in the workspace permitted to define `#[test]` items."

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
cucumber = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tanren-configuration-secrets = { path = "../tanren-configuration-secrets" }
tanren-contract = { path = "../tanren-contract" }
tanren-identity-policy = { path = "../tanren-identity-policy", features = [
  "test-hooks",
] }
tanren-testkit = { path = "../tanren-testkit" }
tokio = { workspace = true }

[[bin]]
name = "tanren-bdd-runner"
path = "src/runner.rs"
