[package]
name = "tanren-bdd"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "BDD step-definition home for Tanren. Hosts the cucumber `World` and the cross-feature step registry. The only crate in the workspace permitted to define `#[test]` items."

[lints]
workspace = true

[dependencies]
 axum = { workspace = true }
 chrono = { workspace = true }
 cucumber = { workspace = true }
 reqwest = { workspace = true, features = ["cookies"] }
 rmcp = { workspace = true, features = [
  "client",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
] }
 secrecy = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
 tanren-api-app = { path = "../tanren-api-app", features = ["test-hooks"] }
 tanren-app-services = { path = "../tanren-app-services" }
 tanren-contract = { path = "../tanren-contract" }
 tanren-identity-policy = { path = "../tanren-identity-policy", features = [
   "test-hooks",
 ] }
 tanren-mcp-app = { path = "../tanren-mcp-app", features = ["test-hooks"] }
  tanren-testkit = { path = "../tanren-testkit" }
  tokio = { workspace = true }

[dev-dependencies]
  expectrl = { workspace = true }

[[bin]]
name = "tanren-bdd-runner"
path = "src/runner.rs"
