[package]
name = "tanren-behavior-proof"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Behavior Proof subsystem: behavior-to-feature linkage, BDD positive and falsification witnesses, coverage, mutation-testing signals."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
