[package]
name = "tanren-configuration-secrets"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Configuration and Secrets subsystem: configuration tiers, inheritance, secret metadata records (no values), rotation, revocation."

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
schemars = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
