[package]
name = "tanren-configuration-secrets"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Configuration and Secrets subsystem: configuration tiers, inheritance, secret metadata records (no values), rotation, revocation."

[lints]
workspace = true

[dependencies]
secrecy = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
