[package]
name = "tanren-contract"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Wire-shape contracts for Tanren's API and MCP boundaries. Foundation crate — orchestration logic does not live here."

[lints]
workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
