[package]
name = "tanren-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Canonical domain model — entities, commands, events, state machines, and error taxonomy"

[lints]
workspace = true

[dependencies]

[dev-dependencies]
