[package]
name = "tanren-domain"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Canonical Tanren domain entities. Foundation crate — depends on no other workspace crate."

[lints]
workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
