[package]
name = "tanren-harness-opencode"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "OpenCode harness adapter — prompt preparation, execution, and telemetry normalization"

[lints]
workspace = true

[dependencies]

[dev-dependencies]
