[package]
name = "tanren-harness"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Harness adapter contract: Harness trait and Capability types. Concrete harnesses (Codex, Claude Code, OpenCode, ...) live in separate adapter crates introduced by the slices that need them."

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
