[package]
name = "tanren-identity-policy"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Identity and Policy subsystem: accounts, organizations, projects, memberships, roles, service accounts, API keys, approval policy, runtime placement policy."

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
schemars = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
