[package]
name = "tanren-mcp-app"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Library crate that hosts the tanren-mcp runtime — rmcp tool surface, API-key middleware, host-header allowlist, and the streamable-HTTP server. The bin/tanren-mcp/src/main.rs entry point is a thin wiring shell."

[lints]
workspace = true

[features]
# Enables a test-only `build_app_with_store` constructor used by the BDD
# wire-harness in `tanren-testkit`. Production binaries do not enable
# this feature.
test-hooks = []

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tanren-app-services = { path = "../tanren-app-services" }
tanren-contract = { path = "../tanren-contract" }
tanren-identity-policy = { path = "../tanren-identity-policy" }
tanren-policy = { path = "../tanren-policy" }
tanren-provider-integrations = { path = "../tanren-provider-integrations" }
tanren-store = { path = "../tanren-store" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
