[package]
name = "tanren-observability"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Shared telemetry primitives — tracing context, metrics registry, and audit correlation"

[lints]
workspace = true

[dependencies]

[dev-dependencies]
