[package]
name = "tanren-observability"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Tracing, structured logging, and span emission primitives shared by all Tanren binaries."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
