[package]
name = "tanren-observation"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Observation subsystem: dashboards, project overview, work pipeline, quality and health signals, forecasts, risk summaries, reports."

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
