[package]
name = "tanren-orchestrator"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Orchestration subsystem: spec lifecycle, task lifecycle, phase execution, control-batch scheduling, review and merge routing."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
