[package]
name = "tanren-policy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Authorization and governance — identity, budgets, quotas, and placement policy"

[lints]
workspace = true

[dependencies]
tanren-domain = { path = "../tanren-domain" }
