[package]
name = "tanren-policy"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Typed authorization, placement, and budget policy decisions. Foundation crate — returns typed decisions, never transport-layer errors."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
tanren-identity-policy = { path = "../tanren-identity-policy" }
thiserror = { workspace = true }
