[package]
name = "tanren-provider-integrations"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Provider Integrations subsystem: outbound connections to source control, CI, issue trackers, cloud/VM providers, notification channels."

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
tanren-identity-policy = { path = "../tanren-identity-policy" }
thiserror = { workspace = true }
uuid = { workspace = true }
