[package]
name = "tanren-quality-controls"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Quality Controls subsystem: automated gates, audit rubric checks, standards adherence checks, run-demo critique semantics, task and spec guards."

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
