[package]
name = "tanren-runtime-local"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Local worktree execution runtime — subprocess-based dispatch execution"

[lints]
workspace = true

[dependencies]

[dev-dependencies]
