[package]
name = "tanren-runtime"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Runtime substrate contract: Substrate trait, ExecutionTarget and Lease types. Concrete substrates (docker, hetzner, GCP, AWS, ...) live in separate adapter crates introduced by the slices that need them."

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
